# viennaclbench-dev

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_Qt4.txt  CMakeLists_Qt5.txt  LICENSE  README.md  ViennaCLBench.pro  ViennaCL_Benchmark.pro  appIcon.qrc  benchmark_controller.cpp  benchmark_controller.h  benchmarkcopy.cpp  benchmarkcopy.h  benchmarkvector.cpp  benchmarkvector.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwidget.cpp  menuwidget.h  menuwidget.ui  otherFiles.qrc  qcustomplot.h  qmlFiles.qrc
benchmarks/: Random.hpp  benchmark_blas3.cpp  benchmark_blas3.h  benchmark_copy.cpp  benchmark_copy.h  benchmark_generatorblas1.cpp  benchmark_generatorblas1.h  benchmark_generatorblas2.cpp  benchmark_generatorblas2.h  benchmark_generatorblas3.cpp  benchmark_generatorblas3.h  benchmark_qr.cpp  benchmark_qr.h  benchmark_scheduler.cpp  benchmark_scheduler.h  benchmark_solver.cpp  benchmark_solver.h  benchmark_sparse.cpp  benchmark_sparse.h  benchmark_vector.cpp  benchmark_vector.h  io.hpp  matrix_market.hpp
cmake/: FindOpenCL.cmake  Findarchive_static.cmake  Findzlibstatic.cmake
qml/jbQuick/Charts/: QChartGallery.js
resources/: icons.qrc  mmFiles.qrc  otherFiles.qrc
resources/matrixmarket/: compressMatrixList.js  compressedMatrixList_basic.json.js  displayTime.js  full.html  groups.html  index.html  lzw.js  mDataList_compressed.json.js  matrixDataInterface.html  matrixGroupGenerator.html  sorttable.js  stylesheet.css
src/: archiveextractor.cpp  archiveextractor.h  benchmark_controller.cpp  benchmark_controller.h  benchmark_model.cpp  benchmark_model.h  benchmarkinstance.cpp  benchmarkinstance.h  benchmarksettings.cpp  benchmarksettings.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixmarket_webview.cpp  matrixmarket_webview.h  menulistwidget.cpp  menulistwidget.h  menuwidget.cpp  menuwidget.h  menuwidget.ui
src/benchmarks/: Random.hpp  abstractbenchmark.cpp  abstractbenchmark.h  benchmark-utils.hpp  benchmark_blas3.cpp  benchmark_blas3.h  benchmark_copy.cpp  benchmark_copy.h  benchmark_generatorblas1.cpp  benchmark_generatorblas1.h  benchmark_generatorblas2.cpp  benchmark_generatorblas2.h  benchmark_generatorblas3.cpp  benchmark_generatorblas3.h  benchmark_qr.cpp  benchmark_qr.h  benchmark_scheduler.cpp  benchmark_scheduler.h  benchmark_solver.cpp  benchmark_solver.h  benchmark_sparse.cpp  benchmark_sparse.h  benchmark_vector.cpp  benchmark_vector.h  io.hpp  matrix_market.hpp
src/qcustomplot/: qcustomplot.cpp  qcustomplot.h
src/resources/: appIcon.qrc  dataFiles.qrc  icons.qrc
src/ui/: basicbenchmark.cpp  basicbenchmark.h  basicbenchmark.ui  benchmarklistwidget.cpp  benchmarklistwidget.h  benchmarkscreen.cpp  benchmarkscreen.h  benchmarkscreen.ui  collapsewidget.cpp  collapsewidget.h  collapsewidget.ui  expertbenchmark.cpp  expertbenchmark.h  expertbenchmark.ui  expertbenchmarkscreen.cpp  expertbenchmarkscreen.h  expertbenchmarkscreen.ui  homescreen.cpp  homescreen.h  homescreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixmarket_alternative.cpp  matrixmarket_alternative.h  matrixmarket_alternative.ui  matrixmarket_webview.cpp  matrixmarket_webview.h  matrixmarket_widget.cpp  matrixmarket_widget.h  matrixmarket_widget.ui  menulistwidget.cpp  menulistwidget.h  qcustomplot.cpp  qcustomplot.h  qtcategorybutton.cpp  qtcategorybutton.h  resulthistory.cpp  resulthistory.h  resulthistory.ui  (+8 more)
src/ui/resources/: icons.qrc  otherFiles.qrc
src/ui/resources/images/: splash-screen.xcf
src/ui/widgets/: collapsewidget.cpp  collapsewidget.h  menulistwidget.cpp  menulistwidget.h
